# FakeEsptool

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  FakeEsptool.ppj  FakeEsptool.ppw  LICENSE  README.md  _config.yml  encryption.md  features.md  index.md  main.c  main.h  main.rc  quick-start.md  res1.xml  test_data.h  test_deflate.ppj
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
docs/: API.md  DEVELOPMENT.md  ENCRYPT_FLASH_GUIDE.md  PROTOCOL.md  REQUIREMENTS.md  TODO.md  WRITE_FLASH_GUIDE.md
src/: app_commands.c  app_commands.h  app_logview.c  app_logview.h  app_protocol.c  app_protocol.h  device_file.c  device_file.h  esptool_hal.c  esptool_hal.h  esptool_proto.c  esptool_proto.h  fesptool_hal.c  fesptool_hal.h  main.c  main.h  protocol.c  protocol.h  resource.h  resource.rc  serial.c  serial.h
src/dlg/: about.c  device_props.c  dlg.h  key_mgmt.c  key_mgmt.h  new_device.c  port_select.c
src/esptool/: chip.c  chip.h  device.c  device.h  efuse.c  efuse.h  esptool.c  esptool.h  flash.c  flash.h  slip.c  slip.h
src/fesptool/: chip.c  chip.h  chip_priv.h  efuse.c  efuse.h  efuse_priv.h  esptool.c  esptool.h  esptool_priv.h  fesp.h  flash.c  flash.h  slip.c  slip.h
src/res/: res1.xml
src/utils/: config.c  config.h  deflate.c  deflate.h  encrypt.c  encrypt.h  lang.c  lang.h  md5.c  md5.h  mem.c  mem.h  timer.c  timer.h  trace.c  trace.h
tests/: CMakeLists.txt  deflate_test_data.h  encrypt_test_data.h  generate_deflate_test_data.py  generate_encrypt_test_data.py  generate_test_data.py  test_chip.c  test_data.h  test_deflate.c  test_efuse.c  test_encrypt.c  test_esptool.c  test_flash.c  test_md5.c  test_slip.c
tests/stubs/: fesptool_hal.h  hal.c  hal_test.h  md5.c  mem.c
tools/: efuse_convert.py  verify_encrypted_flash.py  verify_flash.py
